# XAGClientMultiMedia

./: build.gradle  gradle.properties  settings.gradle
android/os/: annotations.xml
app/: build.gradle
app/src/androidTest/java/cn/xag/xagclientmultimedia/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/xag/xagclientmultimedia/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/xag/xagclientmultimedia/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sign/: A1.keystore  A2.keystore
xagclientmultimedialib/: CMakeLists.txt  build.gradle
xagclientmultimedialib/src/main/: AndroidManifest.xml
xagclientmultimedialib/src/main/cpp/: common.h  native-lib.cpp  ndkH264Decode.cpp  testRTSPClient.cpp
xagclientmultimedialib/src/main/cpp/include/libavcodec/: avcodec.h
xagclientmultimedialib/src/main/cpp/include/libavformat/: avformat.h
xagclientmultimedialib/src/main/cpp/live/BasicUsageEnvironment/: BasicTaskScheduler0.cpp
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/: EglCore.java  EglSurfaceBase.java  ExternalRequest.java  GlUtil.java  Texture2dProgram.java  TextureMovieEncoder.java  ThreadManager.java  TypeGlobal.java  VideoEncoderCore.java  WindowSurface.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/acb1usb/: Acb1Create.java  Receiver.java  USBApplication.java  UsbDeviceCommunication.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/aoausb/: AOACreate.java  AoAData.java  AoADataListener.java  FiFoUtlis.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/drawer/: CameraDrawer.java  SlideGpuFilterGroup.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/fliter/: AFilter.java  CameraFilter.java  GPUImageFilter.java  GroupFilter.java  MagicAntiqueFilter.java  MagicBeautyFilter.java  MagicBrannanFilter.java  MagicCameraInputFilter.java  MagicCoolFilter.java  MagicFreudFilter.java  MagicHefeFilter.java  MagicHudsonFilter.java  MagicInkwellFilter.java  MagicN1977Filter.java  MagicNashvilleFilter.java  NoFilter.java  OesFilter.java  ProcessFilter.java  WaterMarkFilter.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/helper/: FindAFrameHelper.java  H264Decoder.java  MagicFilterFactory.java  MagicFilterType.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/jniutils/: FFmpegDecodH264.java  Live555Rtsp.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/live555rtsp/: Live555Create.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/model/: GlobalDataManager.java  H264DataManager.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/osdmroid/: ArrowPoint.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/utils/: EasyGlUtils.java  FiFoUtlis.java  FindAFrameUtlis.java  H264DecoderDataThread.java  H264DecoderUtlis.java  MatrixUtils.java  OpenGlUtils.java  Rotation.java  TextureRotationUtil.java
xagclientmultimedialib/src/main/java/cn/xag/xagclientmultimefialib/widget/: ARMapView.java  SwitchingView.java  XAGGLSurfaceView.java  XAGSurfaceView.java
xagclientmultimedialib/src/main/res/mipmap-xhdpi/: round_button.xml  round_button_1.xml
xagclientmultimedialib/src/main/res/values/: strings.xml
xagclientmultimedialib/src/main/res/xml/: device_filter.xml
